name:                comp1100-assignment3
synopsis:            COMP1100 Assignment 3
version:             0.1.0.0
license:             AllRightsReserved
author:              Jack Kelly
maintainer:          jack@jackkelly.name
copyright:           2020 The Australian National University
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     AI
                     , AITests
                     , Ataxx
                     , AtaxxTests
                     , Dragons.Ataxx
                     , Dragons.Ataxx.CodeWorld
                     , Dragons.Ataxx.Text
                     , Dragons.Game
                     , Dragons.Game.Network
                     , Dragons.Game.UI.CodeWorld
                     , Dragons.Game.UI.Json
                     , Dragons.Game.UI.Text
                     , Dragons.Main
                     , Dragons.Options
                     , Dragons.TestMain
                     , Testing
  build-depends:       base >= 4.8 && < 5
                     , aeson >= 1.4.6.0 && < 1.5
                     , attoparsec >= 0.13.2.3 && < 0.14
                     , bytestring >= 0.10.8.2 && < 0.11
                     , codeworld-api >= 0.5.0 && < 0.9
                     , containers >= 0.6 && < 0.7
                     , deepseq >= 1.4.4.0 && < 1.5
                     , mtl >= 2.2.2 && < 2.3
                     , network >= 3.1.1.1 && < 3.2
                     , optparse-applicative >= 0.15.1.0 && < 0.16
                     , reflex >= 0.6.4 && < 0.8
                     , safe >= 0.3.18 && < 0.4
                     , streaming-commons >= 0.2.1.2 && < 0.3
                     , text >= 1.2.3.1 && < 1.3
                     , witherable >= 0.3.1 && < 0.4
  default-extensions:  DeriveAnyClass
                     , DeriveGeneric
  hs-source-dirs:      src
  ghc-options:         -Wall -Wno-partial-type-signatures
  default-language:    Haskell2010

executable game
  main-is:             Main.hs
  build-depends:       base
                     , comp1100-assignment3
  hs-source-dirs:      app
  ghc-options:         -threaded -Wall
  default-language:    Haskell2010

test-suite game-tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base
                     , comp1100-assignment3
  hs-source-dirs:      test
  ghc-options:         -threaded -Wall
  default-language:    Haskell2010
